UI v2.40.0: Icônes SVG adaptatives + meilleur contraste + icône historique

--- a/index.html
+++ b/index.html
@@ -392,12 +392,12 @@
                     <span id="header-user-name-inline">Non connecté</span>
                 </div>
                 <div class="ml-auto flex items-center gap-2">
-                <button id="sound-toggle" class="p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-primary-800 hover:text-white transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center" title="Sons">
+                <button id="sound-toggle" class="p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center" title="Sons">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
                         <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 8a5 5 0 0 1 0 8m2.7-11a9 9 0 0 1 0 14M6 15H4a1 1 0 0 1-1-1v-4a1 1 0 0 1 1-1h2l3.5-4.5A.8.8 0 0 1 11 5v14a.8.8 0 0 1-1.5.5z"/>
                     </svg>
                 </button>
-                <button id="theme-toggle" class="p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-primary-800 hover:text-white transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center" title="Basculer le thème">
+                <button id="theme-toggle" class="p-2 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors min-w-[40px] min-h-[40px] flex items-center justify-center" title="Basculer le thème">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
                         <path fill="currentColor" d="M12 1.992a10 10 0 1 0 9.236 13.838c.341-.82-.476-1.644-1.298-1.31a6.5 6.5 0 0 1-6.864-10.787l.077-.08c.551-.63.113-1.653-.758-1.653h-.266l-.068-.006z"/>
                     </svg>
@@ -498,8 +498,16 @@
                         <button id="copy-link-btn" class="hidden px-3 py-1 md:px-4 md:py-2 bg-primary-600 dark:bg-primary-700 text-white border border-primary-600 dark:border-primary-700 rounded-md hover:bg-primary-700 dark:hover:bg-primary-800 transition-colors text-sm" title="Copier le lien de connexion">
                             📋 Lien
                         </button>
-                        <button id="share-history-btn" class="hidden px-3 py-1 md:px-4 md:py-2 bg-amber-600 dark:bg-amber-700 text-white border border-amber-600 dark:border-amber-700 rounded-md hover:bg-amber-700 dark:hover:bg-amber-800 transition-colors text-sm" title="Partager l'historique de conversation">
-                            📤 Historique
+                        <button id="share-history-btn" class="hidden px-3 py-1 md:px-4 md:py-2 bg-amber-600 dark:bg-amber-700 text-white border border-amber-600 dark:border-amber-700 rounded-md hover:bg-amber-700 dark:hover:bg-amber-800 transition-colors text-sm flex items-center gap-2" title="Partager l'historique de conversation">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M8 9h8" />
+                                <path d="M8 13h6" />
+                                <path d="M12.354 20.646l-.354 .354l-3 -3h-3a3 3 0 0 1 -3 -3v-8a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v5.5" />
+                                <path d="M19 22v-6" />
+                                <path d="M22 19l-3 -3l-3 3" />
+                            </svg>
+                            Historique
                         </button>
                         <button id="disconnect-btn" class="px-3 py-1 md:px-4 md:py-2 bg-slate-200 dark:bg-slate-700 text-slate-900 dark:text-slate-100 border border-slate-200 dark:border-slate-600 rounded-md hover:bg-slate-100 dark:hover:bg-slate-600 transition-colors text-sm">
                             Déconnecter
